Bug 410112 - SMS app offers devices which don't have SMS support
Summary: SMS app offers devices which don't have SMS support
Status: RESOLVED FIXED
Alias: None
Product: kdeconnect
Classification: Applications
Component: messaging-application (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources All
: NOR normal
Target Milestone: ---
Assignee: Dmytrii
URL:
Keywords: junior-jobs
: 458930 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-07-22 16:44 UTC by Simon Redman
Modified: 2023-01-23 23:37 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Simon Redman 2019-07-22 16:44:48 UTC
SUMMARY
SMS app offers devices which don't have SMS support

STEPS TO REPRODUCE
1. Pair with a non-SMS device (for example, a PC)
2. Open SMS app
3. Look at available devices

OBSERVED RESULT
Non-SMS device is shown

EXPECTED RESULT
Only devices with SMS capabilities are shown

ADDITIONAL INFORMATION
Probable solution part: https://invent.kde.org/kde/kdeconnect-kde/merge_requests/105/diffs
Comment 1 Simon Redman 2023-01-16 21:33:57 UTC
*** Bug 458930 has been marked as a duplicate of this bug. ***
Comment 2 Simon Redman 2023-01-16 21:36:04 UTC
Marking this item as a junior-job because it should be relatively easy to add this filtering. Feel free to reach out to me if you are interested in taking it on.
Comment 3 Dmytrii 2023-01-23 17:36:13 UTC
Created Merge Request https://invent.kde.org/network/kdeconnect-kde/-/merge_requests/523
Comment 4 Dmytrii 2023-01-23 23:37:33 UTC
Git commit f82d15ce1e0018b089dbc5fb1cfa4f3db82cbf5d by Dmytrii Zavalnyi.
Committed on 23/01/2023 at 17:31.
Pushed by apol into branch 'master'.

SMS app shows devices with SMS capabilities only

Replaced DevicesSortProxyModel with DevicesPluginFilterProxyModel with applied "kdeconnect_sms" filter for the devices list model.

M  +2    -0    declarativeplugin/kdeconnectdeclarativeplugin.cpp
M  +2    -2    smsapp/qml/main.qml

https://invent.kde.org/network/kdeconnect-kde/commit/f82d15ce1e0018b089dbc5fb1cfa4f3db82cbf5d